# nn-interp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  OnnxInterp.cmake  README.md  TflInterp.cmake  TorchInterp.cmake  mix.exs  tensorflow_2_12_0_lite.patch
demo_CLIP/: CLIP_export_script.ipynb  mix.exs
demo_CLIP/lib/: Clip.ex  demo_CLIP.ex
demo_CLIP/lib/CLIP/: Text.ex  Tokenizer.ex  Visual.ex  application.ex
demo_aotgan/: AOT-GAN.livemd  mix.exs
demo_aotgan/lib/: aotgan.ex  demo_aotgan.ex
demo_aotget/: AOT-GAN.livemd  Export_AOT_GAN_torchscript.ipynb  mix.exs
demo_aotget/lib/: aotgan.ex
demo_aotget/lib/demo_aotgan/: application.ex
demo_onnx/: mix.exs
demo_onnx/lib/: demo_r18.ex
demo_r18/: mix.exs
demo_r18/lib/: demo_r18.ex
demo_r18/lib/demo_r18/: application.ex
demo_tflite/: mix.exs
demo_tflite/lib/: demo_r18.ex
demo_torch/: mix.exs  resnet18.livemd  scripted.py
demo_torch/lib/: demo_r18.ex
demo_vgg16/: mix.exs
demo_vgg16/lib/: demo_vgg16.ex
demo_vgg16/lib/demo_vgg16/: application.ex
lib/: nn_interp.ex
lib/nn_interp/: url.ex
livebook_r18/: resnet18.livemd
src/: io_port.cpp  main.cpp  nonmaxsuppression.cpp  postprocess.h  tensor_spec.cpp  tensor_spec.h  tiny_ml.cpp  tiny_ml.h
src/getopt/: getopt.c  getopt.h  getopt_long.c  tree.c
src/onnx/: onnx_interp.cpp  onnx_interp.h
src/tflite/: tfl_interp.cpp  tfl_interp.h
src/torch/: torch_interp.cpp  torch_interp.h
